--- a/test.html
+++ b/test.html
@@ -63,7 +63,7 @@ var svg = d3.select("body").append("svg")
     .attr("width", width)
     .attr("height", height);
 
-d3.json("../../cd93.json", function(error, uk) {
+d3.json("./topojson/cd93.json", function(error, uk) {
   var features = topojson.feature(uk, uk.objects.districts093).features;
   console.log(uk.objects.districts093);
   svg.selectAll(".district")
