--- a/test.html
+++ b/test.html
@@ -33,6 +33,11 @@ svg {
   z-index: 1;
 }
 
+header{
+  position: absolute;
+  top: 0;
+}
+
 </style>
 <body>
 <script src="http://d3js.org/d3.v3.min.js"></script>
@@ -102,6 +107,8 @@ var borderPath = svg.append("rect")
   .style("stroke-width", border);
 
 </script>
+
+<header> The United States Congress (1973-2014)</header>
 
 <!-- add interactive chart here -->
 
