--- a/test.html
+++ b/test.html
@@ -68,7 +68,7 @@ var projection = d3.geo.conicConformal()
 var path = d3.geo.path()
     .projection(projection);
 
-var svg = d3.select(".map").append("svg")
+var svg = d3.select("#map").append("svg")
     .attr("width", width)
     .attr("height", height);
 
