--- a/test.html
+++ b/test.html
@@ -106,14 +106,14 @@ d3.json("./topojson/cd93.json", function(error, uk) {
 //
 // })
 
-var borderPath = svg.append("rect")
-  .attr("x", 0)
-  .attr("y", 60)
-  .attr("height", height)
-  .attr("width", width)
-  .style("stroke", bordercolor)
-  .style("fill", "none")
-  .style("stroke-width", border);
+// var borderPath = svg.append("rect")
+//   .attr("x", 0)
+//   .attr("y", 60)
+//   .attr("height", height)
+//   .attr("width", width)
+//   .style("stroke", bordercolor)
+//   .style("fill", "none")
+//   .style("stroke-width", border);
 
 </script>
 
