--- a/test.html
+++ b/test.html
@@ -22,6 +22,7 @@ svg {
 #map {
   position: absolute;
   top: 60px;
+  background-color: #e5dbcf;
 }
 
 .boundary {
@@ -43,6 +44,7 @@ header{
   top: 0;
   font-size: 40pt;
   font-family: 'Domine', serif;
+  padding: 20px;
 }
 
 </style>
